--- a/views/departments.hbs
+++ b/views/departments.hbs
@@ -11,14 +11,14 @@
     <header>
       <h1>Departments</h1>
     </header>
-    <nav>
-      <a href="/">Home</a>
-      <a href="departments">Departments</a>
-      <a href="certifications">Certifications</a>
-      <a href="employees">Employees</a>
-      <a href="training_sessions">Training Sessions</a>
-      <a href="employees_cert">Employee Certifications</a>
-      <a href="employees_train">Employee Training Sessions</a>
+    <nav class="navbar">
+    <a href="/">Home</a>
+    <a href="departments">Departments</a>
+    <a href="certifications">Certifications</a>
+    <a href="employees">Employees</a>
+    <a href="training_sessions">Training Sessions</a>
+    <a href="employees_cert">Employee Certifications</a>
+    <a href="employees_train">Employee Trainings</a>
     </nav>
     <main>
       <div id="browse">
