--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,6 +5,15 @@
     company's operations. Below, you'll find links to various database pages
     that provide specific functionalities.</p>
 </header>
+    <nav class="navbar">
+    <a href="/">Home</a>
+    <a href="departments">Departments</a>
+    <a href="certifications">Certifications</a>
+    <a href="employees">Employees</a>
+    <a href="training_sessions">Training Sessions</a>
+    <a href="employees_cert">Employee Certifications</a>
+    <a href="employees_train">Employee Trainings</a>
+    </nav>
 <h2>Database Pages</h2>
 <nav>
   <p><a href="/departments">Departments</a> | 
