--- a/views/departments.hbs
+++ b/views/departments.hbs
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Departments</title>
-    <link rel="stylesheet" type="text/css" href="../css/index.css" />
-    <script src="../js/index.js"></script>
-    <script src="../js/add_department.js"></script> 
-    <script src="../js/delete_department.js"></script> 
-    <script src="../js/update_department.js"></script> 
+    <link rel="stylesheet" type="text/css" href="/css/index.css" />
+    <script src="/js/index.js"></script>
+    <script src="/js/add_department.js"></script>
+    <script src="/js/delete_department.js"></script>
+    <script src="/js/update_department.js"></script> 
 </head>
 <body onload="browseMain()">
     <header>
@@ -16,12 +16,12 @@
     </header>
     <nav class="navbar">
         <a href="/">Home</a>
-        <a href="departments">Departments</a>
-        <a href="certifications">Certifications</a>
-        <a href="employees">Employees</a>
-        <a href="training_sessions">Training Sessions</a>
-        <a href="employees_cert">Employee Certifications</a>
-        <a href="employees_train">Employee Trainings</a>
+        <a href="/departments">Departments</a>
+        <a href="/certifications">Certifications</a>
+        <a href="/employees">Employees</a>
+        <a href="/training_sessions">Training Sessions</a>
+        <a href="/employees_cert">Employee Certifications</a>
+        <a href="/employees_train">Employee Trainings</a>
     </nav>
     <main>
         <div id="browse">
@@ -61,7 +61,7 @@
             </form>
         </div>
 
-        <div id="delete" class="form-container" style="display:none;">
+        <div id="update" class="form-container" style="display:none;">
             <form id="update-department-form">
                 <legend>Update Department</legend>
                 <input type="hidden" id="updateDeptID" name="id" />
@@ -72,7 +72,7 @@
             </form>
         </div>
 
-        <div id="update" class="form-container" style="display:none;">
+        <div id="delete" class="form-container" style="display:none;">
             <form id="delete-department-form">
                 <legend>Delete Department</legend>
                 <p>Are you sure you want to delete the department <span id="deleteDeptName"></span> with the following description?</p>
